--- a/config/config.json
+++ b/config/config.json
@@ -18,8 +18,8 @@
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "database_production",
+    "password": "zxc10086",
+    "database": "node-express-demo1",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "timezone": "+08:00"
